--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+    "husky": {
+        "hooks": {
+          "pre-commit": "lint-staged"
+       }
+      },
+      "lint-staged": {
+           "src/**/*.{js,jsx,ts,tsx,json}": [
+             "prettier --write"
+           ]
+         },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -34,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "prettier": "^2.5.1"
   }
 }
