--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+"pre-commit": "lint-staged"
   },
-    "husky": {
-        "hooks": {
-          "pre-commit": "lint-staged"
-       }
-      },
+    
       "lint-staged": {
            "src/**/*.{js,jsx,ts,tsx,json}": [
              "prettier --write"
