--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,13 @@
     "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended", "prettier"],
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": ["error", { "singleQuote": true }]
+        "prettier/prettier": ["error", 
+            { 
+                "singleQuote": true,
+                "endOfLine": "auto"
+            
+      }
+    ]      
     },
     "env": {
         "browser": true,
