--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
     "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended", "prettier"],
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": ["error", 
+        "prettier/prettier": ["warn", 
             { 
                 "singleQuote": true,
                 "endOfLine": "auto"
